thttpd is broken af

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
   static-files-http-server:
     image: nginx
     tty: true
+    entrypoint: /tmp/entrypoint.sh
     volumes:
-      - ./www:/usr/share/nginx/html
+      - ./nginx-entrypoint.sh:/tmp/entrypoint.sh
     ports:
       - "80"
