Revert "thttpd is broken af"
This reverts commit 5f42181794608e2a313c1a59b78f07c6f0aba1f3.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
   static-files-http-server:
     image: nginx
     tty: true
-    entrypoint: /tmp/entrypoint.sh
     volumes:
-      - ./nginx-entrypoint.sh:/tmp/entrypoint.sh
+      - ./www:/usr/share/nginx/html
     ports:
       - "80"
