Revert "thttpd is broken af"
This reverts commit 473ddfea6dec2176dd55d497a0ede7572fdd7a57.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,6 @@ services:
     build: containers/nginx
     tty: true
     environment:
-      - FLAG: "#@{{flag1}}@#"
+      - FLAG="#@{{flag1}}@#"
     ports:
       - "80"
