--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "12345"
   static-files-http-server:
     build: containers/nginx
+    environment:
+      - FLAG=${FLAAG}
     tty: true
     ports:
       - "80"
