--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "12345"
   static-files-http-server:
     build: containers/nginx
+    container_name: static-files-http-server
     environment:
       - FLAG=${FLAG}
     tty: true
