thttpd is broken af

--- a/challenge.yaml
+++ b/challenge.yaml
@@ -2,6 +2,11 @@ title: Testovací úloha
 description: README.md
 handbook: HANDBOOK.md
 shortDescription: null
+access:
+  - port: 8080
+    type: http
+  - port: 12345
+    type: http
 tags:
   - test
   - test2
