--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: containers/echo-http-server
     ports:
       - "12345:12345"
+    depends_on:
+      - static-files-http-server
   static-files-http-server:
     build: containers/nginx
     container_name: static-files-http-server
